# python-ottawa-transit

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.hypothesis/examples/4470a5b26215e608/: dc0397f2288ed43c  e6482ca7f65e9e68
.hypothesis/examples/86ca6c319ece0b5a/: dcc41b11068af216
python_ottawa_transit/: __init__.py  api.py
tests/: test_api.py  test_python_ottawa_transit.py
